agregado la busqueda por url y poco estilo en gifs

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
 .App-link {
   color: #61dafb;
 }
+a{
+  display: block;
+  text-decoration: underline;
+  width: 100%;
+}
 /* img{
   width: 200px;
   height: 200px;
